--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <button id="btn"> Click me!!!!</button>
-    <script src="run.js"></script>
+    <button id="autoBtn">Program Click</button>
+    <!-- <script src="run.js"></script> -->
+    <script src="run1.js"></script>
 </body>
 </html>
